test/swapTuple6.slq

def main(){
	x:=([0:ğ”¹,0:ğ”¹],0:ğ”¹);
	i:=0,j:=1;
	(x[i],x[j]):=(x[j],x[i]); // error
	return x[i]; // error
}
